MDEV-17016: failed assertion in the ha_partition::external_lock()

This patch fixes some partition-related regressions and
failures under rare conditions. In particular, unreleased
auto-increment lock leds to failed assertion when mysqld
compiled in DEBUG mode (only in it) and when test uses
partitions and keys outside the allowed range. A new test
has been added, which reliable replays and tests this rare
situation.

Patch fixes these problems (related to auto-increment locks)
by setting the correct value of the insert_id_for_cur_row
field. In particular, several partitions-related mtr tests
may fail because the write_record() function (which located
in the sql_insert.cc file) goes to the "before_trg_err" label,
and after earlier return from the update_auto_increment()
method the insert_id_for_cur_row field will become zero and,
as a result, the subsequent call of the restore_auto_increment()
function does not restore value of the next_insert_id field,
which in the future results in an error in the release_auto_increment
method. To prevent this, we need to set result instead of
the immediate return from update_auto_increment.

+cosmetic change in the ha_innodb.cc (one of the assertions
has already been moved to another place and can be deleted)

https://jira.mariadb.org/browse/MDEV-17016